// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionInventoryPage renders correctly 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscription Inventory
        </h1>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Purchase subscriptions
        </button>
      </div>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id="getting-started-card"
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__header-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Actions"
                aria-labelledby="titleId resources-toggle-button"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="resources-toggle-button"
                id="resources-toggle-button"
                type="button"
              >
                <span
                  class="pf-c-card__header-toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pf-l-level pf-m-gutter"
            >
              <div
                class="pf-c-card__title"
                id="getting-started-title"
              >
                Getting started resources
              </div>
            </div>
          </div>
        </article>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <div>
          Status Count Cards
        </div>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <section
          class="pf-c-page__main-section pf-m-light"
        >
          <h2
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            All subscriptions for account 
            8675309
          </h2>
          <div>
            Products Table
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`SubscriptionInventoryPage when the products are loading renders the loading component 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-3"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscription Inventory
        </h1>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Purchase subscriptions
        </button>
      </div>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-2"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id="getting-started-card"
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__header-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Actions"
                aria-labelledby="titleId resources-toggle-button"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="resources-toggle-button"
                id="resources-toggle-button"
                type="button"
              >
                <span
                  class="pf-c-card__header-toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pf-l-level pf-m-gutter"
            >
              <div
                class="pf-c-card__title"
                id="getting-started-title"
              >
                Getting started resources
              </div>
            </div>
          </div>
        </article>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <div>
          Status Count Cards
        </div>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <section
          class="pf-c-page__main-section pf-m-light"
        >
          <h2
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-4"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            All subscriptions for account 
            8675309
          </h2>
          <div
            class="pf-l-bullseye"
          >
            <span
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`SubscriptionInventoryPage when the products call fails renders the error page 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscription Inventory
        </h1>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Purchase subscriptions
        </button>
      </div>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id="getting-started-card"
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__header-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Actions"
                aria-labelledby="titleId resources-toggle-button"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="resources-toggle-button"
                id="resources-toggle-button"
                type="button"
              >
                <span
                  class="pf-c-card__header-toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pf-l-level pf-m-gutter"
            >
              <div
                class="pf-c-card__title"
                id="getting-started-title"
              >
                Getting started resources
              </div>
            </div>
          </div>
        </article>
      </div>
      <div
        class="pf-c-empty-state pf-m-lg ins-c-empty-state__unavailable pf-m-redhat-font"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h5
            class="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            This page is temporarily unavailable
          </h5>
          <div
            class="pf-c-empty-state__body"
          >
            Try refreshing the page. If the problem persists, contact your organization administrator or visit our
            <a
              href="https://status.redhat.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
               
              status page
            </a>
             
            for known outages.
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SubscriptionInventoryPage when the status cards are loading renders the loading component 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-7"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscription Inventory
        </h1>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Purchase subscriptions
        </button>
      </div>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-4"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id="getting-started-card"
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__header-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Actions"
                aria-labelledby="titleId resources-toggle-button"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="resources-toggle-button"
                id="resources-toggle-button"
                type="button"
              >
                <span
                  class="pf-c-card__header-toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pf-l-level pf-m-gutter"
            >
              <div
                class="pf-c-card__title"
                id="getting-started-title"
              >
                Getting started resources
              </div>
            </div>
          </div>
        </article>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-l-bullseye"
        >
          <span
            aria-label="Contents"
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-xl"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <section
          class="pf-c-page__main-section pf-m-light"
        >
          <h2
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-8"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            All subscriptions for account 
            8675309
          </h2>
          <div>
            Products Table
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`SubscriptionInventoryPage when the status cards call fails renders the error page 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-l-split pf-m-gutter"
    >
      <div
        class="pf-l-split__item pf-m-fill"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-5"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
          widget-type="InsightsPageHeaderTitle"
        >
          Subscription Inventory
        </h1>
      </div>
      <div
        class="pf-l-split__item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Purchase subscriptions
        </button>
      </div>
    </div>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <article
          class="pf-c-card"
          data-ouia-component-id="OUIA-Generated-Card-3"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id="getting-started-card"
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__header-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Actions"
                aria-labelledby="titleId resources-toggle-button"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="resources-toggle-button"
                id="resources-toggle-button"
                type="button"
              >
                <span
                  class="pf-c-card__header-toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="pf-l-level pf-m-gutter"
            >
              <div
                class="pf-c-card__title"
                id="getting-started-title"
              >
                Getting started resources
              </div>
            </div>
          </div>
        </article>
      </div>
      <div
        class="pf-c-empty-state pf-m-lg ins-c-empty-state__unavailable pf-m-redhat-font"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <h5
            class="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-6"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            This page is temporarily unavailable
          </h5>
          <div
            class="pf-c-empty-state__body"
          >
            Try refreshing the page. If the problem persists, contact your organization administrator or visit our
            <a
              href="https://status.redhat.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
               
              status page
            </a>
             
            for known outages.
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SubscriptionInventoryPage when the user call fails renders an error message when user call fails 1`] = `
<div>
  <div
    class="pf-c-empty-state pf-m-lg ins-c-empty-state__unavailable pf-m-redhat-font"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <svg
        aria-hidden="true"
        class="pf-c-empty-state__icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
      <h5
        class="pf-c-title pf-m-lg"
        data-ouia-component-id="OUIA-Generated-Title-3"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        This page is temporarily unavailable
      </h5>
      <div
        class="pf-c-empty-state__body"
      >
        Try refreshing the page. If the problem persists, contact your organization administrator or visit our
        <a
          href="https://status.redhat.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          status page
        </a>
         
        for known outages.
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionInventoryPage when the user does not have proper permissions redirects to not authorized page 1`] = `<div />`;
